docs: the documents say what the code does
A cold read of the four public documents and a claim audit against the source
found eight false statements, and the correction pass that followed introduced
six more of its own. Both rounds are folded in here.

A read stops at the first place that answers. A save's clearing of the places
above it is best effort rather than a guarantee, which the code's own Javadoc
already said. The throw-rather-than-read-as-absent rule holds only for a place
that answers other questions. A remove reaches the places a save can write to.
The README credited the credential file with protection only the operating
system's stores give, and told a consumer that every failure is a
SecretStoreException when the two input refusals are IllegalArgumentException.

docs/design.md described a release pipeline in the present tense that no
workflow implements yet. The four lines that expire when 0.1.0 publishes are
listed in the working notes as L3 steps.

The same claims lived in Javadoc, so SecretStore, TieredSecretStore,
module-info and both package-info files carry the corrections too. The platform
package gains the block the conventions ask of it.

Claude-Session: https://claude.ai/code/session_015LVeFNquDwa2KwThBmzPAr